<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >

    <Button
        android:id="@+id/stockdpibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set100dpibutton"
        android:layout_alignBottom="@+id/set100dpibutton"
        android:layout_toRightOf="@+id/set100dpibutton"
        android:text="@string/set120DPI" />

    <Button
        android:id="@+id/set90dpibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/set90dpi" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/set100dpibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set90dpibutton"
        android:layout_alignBottom="@+id/set90dpibutton"
        android:layout_toRightOf="@+id/set90dpibutton"
        android:text="@string/set100DPI" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set90dpibutton"
        android:layout_below="@+id/stockdpibutton"
        android:text="@string/howto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp" />

</RelativeLayout>